--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     </head>
 
     <body>
-        <div class="header">
+        <header>
             <h1>Hori<span id="header-seo">seo</span>n</h1>
-            <div class="header-menu">
+            <nav>
                 <ul>
                     <li>
                         <a href="#search-engine-optimization">Search Engine Optimization</a>
@@ -22,12 +22,12 @@
                         <a href="#social-media-marketing">Social Media Marketing</a>
                     </li>
                 </ul>
-            </div>
-        </div>
+            </nav>
+        </header>
 
         <div class="hero"></div>
 
-        <div class="content">
+        <article>
             <div class="content-section">
                 <img class="img-float-left" src="./assets/images/search-engine-optimization.jpg" />
                 <h2>Search Engine Optimization</h2>
@@ -49,9 +49,9 @@
                     Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
                 </p>
             </div>
-        </div>
+        </article>
 
-        <div class="benefits">
+        <aside>
             <div class="benefit-section">
                 <h3>Lead Generation</h3>
                 <img src="./assets/images/lead-generation.png" />
@@ -73,14 +73,14 @@
                     As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
                 </p>
             </div>
-        </div>
+        </aside>
 
-        <div class="footer">
+        <footer>
             <h2>Made with ❤️️ by Horiseon</h2>
             <p>
                 &copy; 2019 Horiseon Social Solution Services, Inc.
             </p>
-        </div>
+        </footer>
 
     </body>
 
