Last review and comment on CSS and HTML

--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 
     <body>
         <header>
+            <!-- Page logo -->
             <h1>Hori<span id="header-seo">seo</span>n</h1>
+            <!-- Navigation menu -->
             <nav>
                 <ul>
                     <li>
@@ -25,8 +27,10 @@
             </nav>
         </header>
 
+        <!-- Main hero image fullwidth -->
         <div class="hero"></div>
 
+        <!-- Content section -->
         <article>
             <div class="content-section">
                 <img class="img-float-left" src="./assets/images/search-engine-optimization.jpg" alt="Search Engine Optimization photo"/>
@@ -51,6 +55,7 @@
             </div>
         </article>
 
+        <!-- Benefits section -->
         <aside>
             <div class="benefit-section">
                 <h3>Lead Generation</h3>
@@ -75,6 +80,7 @@
             </div>
         </aside>
 
+        <!-- Footer -->
         <footer>
             <h2>Made with ❤️️ by Horiseon</h2>
             <p>
